--- a/contact/index.html
+++ b/contact/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176013803-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZXZDSYKM2"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'UA-176013803-1');
+            gtag('config', 'G-PZXZDSYKM2');
         </script>
 
         <!-- meta -->
@@ -20,8 +20,8 @@
         <!-- Open Graph Tags -->
         <meta property="og:title" content="応募・お問い合わせ | 鹿児島のチャットレディなら、celine.(セリーヌ)">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://chat-fukuoka.com/">
-        <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
+        <meta property="og:url" content="https://chatlady-celine.com/">
+        <meta property="og:image" content="https://chatlady-celine.com/res/og-img.jpg">
         <meta property="og:site_name" content="celine. (セリーヌ) | 鹿児島で今一番人気のプロダクション">
         <meta property="og:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta property="og:locale" content="ja_JP">
@@ -29,8 +29,8 @@
         <meta name="twitter:card" content="summary">
 
         <!-- favicon setting -->
-        <link rel="shortcut icon" href="https://chat-fukuoka.com/res/favicon.ico">
-        <link rel="apple-touch-icon" sizes="180x180" href="https://chat-fukuoka.com/res/apple-touch-icon.png">
+        <link rel="shortcut icon" href="https://chatlady-celine.com/res/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://chatlady-celine.com/res/apple-touch-icon.png">
         <meta name="theme-color" content="#fafafa">
 
         <!-- css -->
@@ -86,7 +86,6 @@
                     <a href="tel:0120897296"><span class="phone">電話で応募する</span></a>
                 </div>
                 <div id="showFormBtn" class="col-10 offset-1 col-md-4 offset-md-0 btn spacer_top" data="mail">
-                    <!-- <a href="mailto:celinelivechat@gmail.com"><span class="mail">メールで応募する</span></a> -->
                     <p><span class="mail">メールで応募する</span></p>
                 </div>
             </div>
@@ -130,7 +129,7 @@
                                     <div class="formRow col-12">
                                         <p class="require">必須</p>
                                         <label class="formTitle" for="mail">メールアドレス</label>
-                                        <input id="mail" name="mail" type="email" placeholder="(例)celine.fukuoka@celine.com" required="true" />
+                                        <input id="mail" name="mail" type="email" placeholder="(例)celine@chatlady-celine.com" required="true" />
                                         <p id="mailErrMsg" class="errormsg"></p>
                                     </div>
                                     <div class="formRow col-12 d-flex flex-column flex-md-row">
@@ -182,7 +181,7 @@
                                         </div>
                                         <div>
                                             <label for='targetPlace'>指定場所</label>
-                                            <input type="text" name="targetPlace" id='targetPlace' placeholder="(例)西鉄薬院駅周辺" maxlength="30" />
+                                            <input type="text" name="targetPlace" id='targetPlace' placeholder="(例)桜島桟橋通駅周辺" maxlength="30" />
                                         </div>
                                     </div>
                                     <div class="formRow col-12">
@@ -327,8 +326,6 @@
             </div>
             <div class="row cms-video mt-16">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <!-- <img src="../res/comming-soon-video.jpg" alt="comming soon for the video" />
-                    <p class="txt">- ご応募からの流れ -</p> -->
                     <video src="../res/apply-flow.mp4" preload="metadata" playinline controls poster="../res/apply-flow-poster.jpg"></video>
                 </div>
             </div>
@@ -352,13 +349,6 @@
                     </li>
                 </ul>
             </div>
-            <!-- <div class="row mt-16">
-                <div class="col-12">
-                    <div class="center">
-                        <div id="apply_btn" class="btn">今すぐ応募</div>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </section>
 
