--- a/contact/thanks.html
+++ b/contact/thanks.html
@@ -2,12 +2,12 @@
 <html lang="ja">
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176013803-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZXZDSYKM2"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'UA-176013803-1');
+            gtag('config', 'G-PZXZDSYKM2');
         </script>
 
         <!-- meta -->
@@ -20,8 +20,8 @@
         <!-- Open Graph Tags -->
         <meta property="og:title" content="ご応募ありがとうございます。 | 鹿児島のチャットレディなら、celine.(セリーヌ)">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://chat-fukuoka.com/">
-        <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
+        <meta property="og:url" content="https://chatlady-celine.com/">
+        <meta property="og:image" content="https://chatlady-celine.com/res/og-img.jpg">
         <meta property="og:site_name" content="celine. (セリーヌ) | 鹿児島で今一番人気のプロダクション">
         <meta property="og:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!桜島桟橋通駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta property="og:locale" content="ja_JP">
@@ -29,8 +29,8 @@
         <meta name="twitter:card" content="summary">
 
         <!-- favicon setting -->
-        <link rel="shortcut icon" href="https://chat-fukuoka.com/res/favicon.ico">
-        <link rel="apple-touch-icon" sizes="180x180" href="https://chat-fukuoka.com/res/apple-touch-icon.png">
+        <link rel="shortcut icon" href="https://chatlady-celine.com/res/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://chatlady-celine.com/res/apple-touch-icon.png">
         <meta name="theme-color" content="#fafafa">
 
         <!-- css -->
