--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176013803-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZXZDSYKM2"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'UA-176013803-1');
+            gtag('config', 'G-PZXZDSYKM2');
         </script>
 
         <!-- meta -->
@@ -15,14 +15,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no">
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
-        <meta name="description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta name="description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ!!最低時給1200円を保障!今だけ入店祝い金10万円を支給!はceline.だけ。専属のスタイリストがヘアメイクをサポート!化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta charset="utf-8">
 
         <!-- Open Graph Tags -->
-        <meta property="og:title" content="鍵島のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
+        <meta property="og:title" content="鹿児島のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://chat-fukuoka.com/">
-        <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
+        <meta property="og:url" content="https://chatlady-celine.com/">
+        <meta property="og:image" content="https://chatlady-celine.com/res/og-img.jpg">
         <meta property="og:site_name" content="celine. (セリーヌ) | 鹿児島で今一番人気のプロダクション">
         <meta property="og:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta property="og:locale" content="ja_JP">
@@ -31,8 +31,8 @@
         <meta name="twitter:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
 
         <!-- favicon setting -->
-        <link rel="shortcut icon" href="https://chat-fukuoka.com/res/favicon.ico">
-        <link rel="apple-touch-icon" sizes="180x180" href="https://chat-fukuoka.com/res/apple-touch-icon.png">
+        <link rel="shortcut icon" href="https://chatlady-celine.com/res/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://chatlady-celine.com/res/apple-touch-icon.png">
         <meta name="theme-color" content="#fafafa">
 
         <!-- css -->
@@ -151,7 +151,7 @@
     <section id="dear" class="triangle pink">
         <div class="">
             <div style="text-align: center;">
-                <span class="sml_caption">DEAR FUKUOKA'S LADIES</span>
+                <span class="sml_caption">DEAR KAGOSHIMA'S LADIES</span>
             </div>
             <h2><span>鹿児島の女性の皆様へ</span></h2>
             <div class="container">
@@ -159,7 +159,7 @@
                     <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                         <p class="bk-pink_v center">こんなことを思っていませんか？</p>
                         <div class="office-imgs">
-                            <img src="./res/dearfukuoka.jpg" />
+                            <img src="./res/dearfukuoka.jpg" alt="鹿児島の女性の皆様へ" />
                         </div>
                         <div class="ul_box">
                         <ul class="tbl">
@@ -529,7 +529,6 @@
                                 <span class="bold">桜島桟橋通駅<br/>水族館口駅</span>
                                 <span class="bold">徒歩圏内</span>
                             </h3>
-                            <!-- <p class="col-8">ショッピング、通勤に便利な天神エリアにオフィスがあります。仕事帰りにショッピングやヨガに行けたり、お友達と待ち合わせてご飯やカフェに行けたりできます。</p> -->
                             <p class="col-8">桜島桟橋通駅から徒歩４分、水族館口駅から徒歩５分のところにオフィスがあります。仕事帰りにショッピングやヨガに行けたり、お友達と待ち合わせてご飯やカフェに行けたりできます。</p>
                         </div>
                     </div>    
@@ -542,17 +541,6 @@
         <h2 class="main_cap en_title"><small>CAMPAIN</small><br />キャンペーン</h2>
         <div class="container">
             <div class="row">
-                <!-- <div class="col-12 col-md-8 offset-md-2 d-flex">
-                    <img class="" src="./res/campain1.svg" alt="今だけ！限定！応援キャンペーン" />
-                    <div class="inner">
-                        <h3><span class="tag">入店お祝い金</span>
-                            <div class="d-flex justify-content-center">
-                                <span class="accent">最大</span>
-                                <p><span class="bdd">5万円</span><span class='semaku'>もらえる！</span></p>
-                            </div>
-                        </h3>
-                    </div>
-                </div> -->
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
                         <img style="width: 100%;" src="./res/202110-banner2.gif" alt="最大10万円支給！">
@@ -651,8 +639,6 @@
             </div>
             <div class="row cms-video mt-16">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <!-- <img src="res/comming-soon-video.jpg" alt="comming soon for the video" />
-                    <p class="txt">- ご応募からの流れ -</p> -->
                     <video src="./res/apply-flow.mp4" preload="metadata" playinline controls poster="./res/apply-flow-poster.jpg"></video>
                 </div>
             </div>
