--- a/contact/thanks.html
+++ b/contact/thanks.html
@@ -11,26 +11,26 @@
         </script>
 
         <!-- meta -->
-        <title>ご応募ありがとうございます。 | 福岡のチャットレディなら、celine.(セリーヌ)</title>
+        <title>ご応募ありがとうございます。 | 鹿児島のチャットレディなら、celine.(セリーヌ)</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no">
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
         <meta charset="utf-8">
 
         <!-- Open Graph Tags -->
-        <meta property="og:title" content="ご応募ありがとうございます。 | 福岡のチャットレディなら、celine.(セリーヌ)">
+        <meta property="og:title" content="ご応募ありがとうございます。 | 鹿児島のチャットレディなら、celine.(セリーヌ)">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://chat-fukuoka.com/">
-        <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
-        <meta property="og:site_name" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
-        <meta property="og:description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta property="og:url" content="http://chatlady-celine.com/">
+        <meta property="og:image" content="http://chatlady-celine.com/og-img.jpg">
+        <meta property="og:site_name" content="celine. (セリーヌ) | 鹿児島で今一番人気のプロダクション">
+        <meta property="og:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta property="og:locale" content="ja_JP">
-        <meta name="twitter:text:title" content="ご応募ありがとうございます。 | 福岡のチャットレディなら、celine.(セリーヌ)">
+        <meta name="twitter:text:title" content="ご応募ありがとうございます。 | 鹿児島のチャットレディなら、celine.(セリーヌ)">
         <meta name="twitter:card" content="summary">
 
         <!-- favicon setting -->
-        <link rel="shortcut icon" href="https://chat-fukuoka.com/res/favicon.ico">
-        <link rel="apple-touch-icon" sizes="180x180" href="https://chat-fukuoka.com/res/apple-touch-icon.png">
+        <link rel="shortcut icon" href="http://chatlady-celine.com/res/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="http://chatlady-celine.com/res/apple-touch-icon.png">
         <meta name="theme-color" content="#fafafa">
 
         <!-- css -->
@@ -42,28 +42,6 @@
 
     </head>
 <body>
-    <!-- <header id="header">
-        <div class="smpMenu d-flex">
-            <div class="smpfixed d-lg-none">
-                <ul class="d-flex">
-                    <li class='menu'><span></span><span></span>メニュー</li>
-                    <li><a href="./contact">応募する</a></li>
-                    <li><a href="#header">TOPへ</a></li>
-                </ul>
-            </div>
-            <div class="menuwrap">
-            <ul>
-                <li data="header" goHome="true">HOME</li>
-                <li data="#chatlady" goHome="true"><small>ABOUT</small><br />お仕事について</li>
-                <li data="#benefit" goHome="true"><small>BENEFITS</small><br />セリーヌで働くメリット</li>
-                <li data="#office" goHome="true"><small>OFFICE</small><br />オフィス・お仕事環境</li>
-                <li data="#campain" goHome="true"><small>CAMPAIN</small><br />キャンペーン</li>
-                <li data="#qa" goHome="true"><small>Q&A</small><br />よくある質問</li>
-                <li data="#apply" goHome="true"><small>APPLY</small><br />ご応募はこちら</li>
-            </ul>
-            </div>
-        </div>
-    </header> -->
 
     <section id="apply" class='contact' style="border-top:none;">
         <h2 class="main_cap en_title"><small>THANK YOU</small><br />ご応募ありがとうございます！</h2>
@@ -83,13 +61,10 @@
     
     <footer class="bk-pink_v">
         <h2>
-            福岡チャトレディで働くなら<br />
+            鹿児島チャトレディで働くなら<br />
                 <span class="logo">celine.</span>
         </h2>
-        <div>
-            <small>写真提供：shutterstock, 福岡市</small>
-        </div>
-	    <p id="copyright">&copy;2021 celine.</p><!-- copyright -->
+	    <p id="copyright">&copy;2022 celine.</p><!-- copyright -->
     </footer>
 
     <!-- js -->
