--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no">
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
-        <meta name="description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta name="description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta charset="utf-8">
 
         <!-- Open Graph Tags -->
         <meta property="og:title" content="鍵島のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://chat-fukuoka.com/">
-        <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
+        <meta property="og:url" content="http://chatlady-celine.com/">
+        <meta property="og:image" content="http://chatlady-celine.com/res/og-img.jpg">
         <meta property="og:site_name" content="celine. (セリーヌ) | 鹿児島で今一番人気のプロダクション">
-        <meta property="og:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta property="og:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta property="og:locale" content="ja_JP">
         <meta name="twitter:text:title" content="鹿児島のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta name="twitter:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
 
         <!-- favicon setting -->
-        <link rel="shortcut icon" href="https://chat-fukuoka.com/res/favicon.ico">
-        <link rel="apple-touch-icon" sizes="180x180" href="https://chat-fukuoka.com/res/apple-touch-icon.png">
+        <link rel="shortcut icon" href="http://chatlady-celine.com/res/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="http://chatlady-celine.com/res/apple-touch-icon.png">
         <meta name="theme-color" content="#fafafa">
 
         <!-- css -->
@@ -95,7 +95,7 @@
             </ul>
         </div>
         <div class="wrap4">
-            <p><span>業界1の破格待遇!!<br />入店祝い最大10万円</span></p>
+            <p><span>業界1の破格待遇!!<br />入店祝い最大5万円</span></p>
         </div>
         <div class="wrap5">
             <p>やりたい事いっぱいあるから始めた。</p>
@@ -130,7 +130,7 @@
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
                         <a href='#campain'>
-                            <img style="width: 100%;" src="./res/202110-banner.gif" alt="最大10万円支給！">
+                            <img style="width: 100%;" src="./res/202201-banner.gif" alt="最大5万円支給！">
                         </a>
                     </h3>
                 </div>
@@ -143,15 +143,12 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="center spacer_top">
-            <a href='#campain' class="btn">お得なキャンペーンはこちら</a>
-        </div> -->
     </section>
 
     <section id="dear" class="triangle pink">
         <div class="">
             <div style="text-align: center;">
-                <span class="sml_caption">DEAR FUKUOKA'S LADIES</span>
+                <span class="sml_caption">DEAR KAGOSHIMA'S LADIES</span>
             </div>
             <h2><span>鹿児島の女性の皆様へ</span></h2>
             <div class="container">
@@ -697,7 +694,7 @@
             鹿児島チャットレディで働くなら<br />
                 <span class="logo">celine.</span>
         </h2>
-	    <p id="copyright">&copy;2021 celine.</p><!-- copyright -->
+	    <p id="copyright">&copy;2022 celine.</p><!-- copyright -->
     </footer>
 
     <!-- js -->
