--- a/contact/index.html
+++ b/contact/index.html
@@ -233,7 +233,7 @@
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
-                        <img style="width: 100%;" src="../res/202201-banner.gif" alt="最大5万円支給！">
+                        <img style="width: 100%;" src="../res/202201-banners2.gif" alt="最大5万円支給！">
                     </h3>
                 </div>
                 <div class="col-12 col-md-4">
