--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
                         <a href='#campain'>
-                            <img style="width: 100%;" src="./res/202201-banners.gif" alt="最大5万円支給！">
+                            <img style="width: 100%;" src="./res/202201-baners.gif" alt="最大5万円支給！">
                         </a>
                     </h3>
                 </div>
@@ -540,7 +540,7 @@
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
-                        <img style="width: 100%;" src="./res/202201-banners2.gif" alt="最大5万円支給！">
+                        <img style="width: 100%;" src="./res/202201-baners2.gif" alt="最大5万円支給！">
                     </h3>
                     <p style="padding:8px 8px 0;">魅力的なキャンペーンが無期限継続決定！この機会に是非‼&nbsp;詳しくは面接当日にご説明させていただきます。</p>
                 </div>
