--- a/contact/index.html
+++ b/contact/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="row another-apply">
                 <div class="col-10 offset-1 col-md-4 offset-md-0 btn spacer_top" data="line">
-                    <a href="https://lin.ee/4KhTqqirH" target="_blank" rel=”noopener”><span class="line">LINEで応募する</span></a>
+                    <a href="https://lin.ee/IiRFV0S" target="_blank" rel=”noopener”><span class="line">LINEで応募する</span></a>
                 </div>
                 <div class="col-10 offset-1 col-md-4 offset-md-0 btn spacer_top" data="phone">
                     <a href="tel:0120897296"><span class="phone">電話で応募する</span></a>
