--- a/contact/index.html
+++ b/contact/index.html
@@ -16,6 +16,7 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
         <meta charset="utf-8">
+        <meta name="facebook-domain-verification" content="580wtbk6ixna1wt9iwe2o6pincml66" />
 
         <!-- Open Graph Tags -->
         <meta property="og:title" content="応募・お問い合わせ | 鹿児島のチャットレディなら、celine.(セリーヌ)">
