--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
         <meta name="description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ!!最低時給1200円を保障!今だけ入店祝い金10万円を支給!はceline.だけ。専属のスタイリストがヘアメイクをサポート!化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta charset="utf-8">
+        <meta name="facebook-domain-verification" content="580wtbk6ixna1wt9iwe2o6pincml66" />
 
         <!-- Open Graph Tags -->
         <meta property="og:title" content="鹿児島のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
