--- a/contact/index.html
+++ b/contact/index.html
@@ -81,9 +81,9 @@
                 <div class="col-10 offset-1 col-md-4 offset-md-0 btn spacer_top" data="line">
                     <a href="https://lin.ee/IiRFV0S" target="_blank" rel=”noopener”><span class="line">LINEで応募する</span></a>
                 </div>
-                <div class="col-10 offset-1 col-md-4 offset-md-0 btn spacer_top" data="phone">
+                <!-- <div class="col-10 offset-1 col-md-4 offset-md-0 btn spacer_top" data="phone">
                     <a href="tel:0120897296"><span class="phone">電話で応募する</span></a>
-                </div>
+                </div> -->
                 <div id="showFormBtn" class="col-10 offset-1 col-md-4 offset-md-0 btn spacer_top" data="mail">
                     <p><span class="mail">メールで応募する</span></p>
                 </div>
