--- a/contact/index.html
+++ b/contact/index.html
@@ -78,17 +78,12 @@
                 <p class="bold center col-12 col-md-10 offset-md-1"><strong>年中無休、24時間いつでも受付中です。</strong></p>
             </div>
             <div class="row another-apply">
-                <div class="col-10 offset-1 col-md-4 offset-md-2">
-                <div class="btn spacer_top" data="line">
+                <div class="col-10 offset-1 btn spacer_top" data="line">
                     <a href="https://lin.ee/IiRFV0S" target="_blank" rel=”noopener”><span class="line">LINEで応募する</span></a>
-                </div></div>
-                <!-- <div class="col-10 offset-1 col-md-4 offset-md-0 btn spacer_top" data="phone">
-                    <a href="tel:0120897296"><span class="phone">電話で応募する</span></a>
-                </div> -->
-                <div class="col-10 offset-1 col-md-4 offset-md-0">
-                <div id="showFormBtn" class="btn spacer_top" data="mail">
+                </div>
+                <div id="showFormBtn" class="col-10 offset-1 btn spacer_top" data="mail">
                     <p><span class="mail">メールで応募する</span></p>
-                </div></div>
+                </div>
             </div>
             <div class="row" id="formrow" style="display: none;">
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
