--- a/contact/index.html
+++ b/contact/index.html
@@ -78,10 +78,10 @@
                 <p class="bold center col-12 col-md-10 offset-md-1"><strong>年中無休、24時間いつでも受付中です。</strong></p>
             </div>
             <div class="row another-apply">
-                <div class="col-10 offset-1 col-md-4 offset-md-2 btn spacer_top" data="line">
+                <div class="col-10 offset-1 col-md-4 offset-md-1 btn spacer_top" data="line">
                     <a href="https://lin.ee/IiRFV0S" target="_blank" rel=”noopener”><span class="line">LINEで応募する</span></a>
                 </div>
-                <div id="showFormBtn" class="col-10 offset-1 col-md-4 btn spacer_top" data="mail">
+                <div id="showFormBtn" class="col-10 offset-1 col-md-4 offset-md-2 btn spacer_top" data="mail">
                     <p><span class="mail">メールで応募する</span></p>
                 </div>
             </div>
